# winmon

./: Cargo.toml  DEVELOPMENT.md  README.md  UPSTREAM.md  features.md  install.ps1  run.ps1
.github/workflows/: check.yml  release.yml
docx/: DEVELOPMENT.zh-CN.md  README.zh-CN.md  features.zh-CN.md
example-grafana/: compose.yaml  grafana-dashboard.json  prometheus.yml
scripts/: gen-winget.ps1  install.ps1  package.ps1  run.ps1
src/: app.rs  serve.rs  sources.rs
