[package]
name = "winmon"
version = "0.7.0"
edition = "2024"
description = "Windows terminal hardware monitor"
license = "MIT"
readme = "README.md"
repository = "https://github.com/ailuntz/winmon"

[lints.rust]
unused_imports = "deny"

[lints.clippy]
single_match = "allow"

[dependencies]
chrono = "0.4.41"
clap = { version = "4.5.39", features = ["derive"] }
crossterm = "0.28.1"
ratatui = { version = "0.29.0", features = ["serde"] }
serde = { version = "1.0.219", features = ["derive"] }
serde-inline-default = "0.2.3"
serde_json = "1.0.140"
